5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1635_2703.log
== TEST (2019-04-07 20:32:31) 
-- CODE:
i = int(input())

if (18>=idade):
	msg = "eleitor"
	
else:
	msg = "nao_eleitor"
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (18>=idade):
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 20:32:45) 
-- CODE:
i = int(input())

if (18>=i):
	msg = "eleitor"
	
else:
	msg = "nao_eleitor"
	
print(msg)
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 20:32:51) 
-- CODE:
i = int(input())

if (18>=i):
	msg = "eleitor"
	
else:
	msg = "nao_eleitor"
	
print(msg)
-- EXECUTION TIME:
0.163444
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 20:33:01) 
-- CODE:
i = int(input())

if (18>=i):
	msg = "eleitor"
	
else:
	msg = "nao_eleitor"
	
print(msg)
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 20:33:20) 
-- CODE:
i = int(input())

if (i>=18):
	msg = "eleitor"
	
else:
	msg = "nao_eleitor"
	
print(msg)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 20:33:38) 
-- CODE:
i = int(input())

if (i>=18):
	msg = "eleitor"
	
else:
	msg = "nao_eleitor"
	
print(msg)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 20:33:54) 
-- CODE:
i = int(input())

if (i >= 18):
	msg = "eleitor"
	
else:
	msg = "nao_eleitor"
	
print(msg)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 20:34:08) 
-- CODE:
idade = int(input())

if (idade >= 18):
	msg = "eleitor"
	
else:
	msg = "nao_eleitor"
	
print(msg)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 20:34:55) 
-- CODE:
idade = int(input())

if (idade >= 18):
	msg = "eleitor"
	
else:
	msg = "nao_eleitor"
	
print(msg)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 20:35:51) 
-- CODE:
idade = int(input())

if (idade >= 18):
	msg = "eleitor"
	
else:
	msg = "nao_eleitor"
	
print(msg)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 20:35:53) 
-- CODE:
idade = int(input())

if (idade >= 18):
	msg = "eleitor"
	
else:
	msg = "nao_eleitor"
	
print(msg)
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 20:35:58) 
-- CODE:
idade = int(input())

if (idade >= 18):
	msg = "eleitor"
	
else:
	msg = "nao_eleitor"
	
print(msg)
-- EXECUTION TIME:
0.174274
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
